syntax = "proto3";

package phi;
option go_package = "github.com/clstb/phi/proto";


import "google/protobuf/empty.proto";
import "gw.proto";


message SyncMessage {
  string Username = 1;
  string token = 2;
}


service BeanAccountService {

  rpc ProvisionFSStructure (StringMessage) returns (google.protobuf.Empty);
  rpc SyncLedger (SyncMessage) returns (google.protobuf.Empty);


}
